tests/errors/vector-method-shape.ari
fn main() -> i64 {
  var values: Vec[i64] = [];
  values.push();
  return 0;
}
